--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -2,9 +2,9 @@ name: Pre-Release
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on pull request events but only for the main branch
+  # Triggers the workflow on pull request events but only for the production branch
   pull_request:
-    branches: [main]
+    branches: [production]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
