--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,9 @@ name: Release
 
 # Controls when the workflow will run
 on:
- # Triggers the workflow on push events but only for the main branch
+ # Triggers the workflow on push events but only for the production branch
   push:
-    branches: [main]
+    branches: [production]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
