--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -4,9 +4,9 @@ name: Staging
 on:
  # Triggers the workflow on push or pull request events but only for the develop branch
   push:
-    branches: [staging]
+    branches: [main]
   pull_request:
-    branches: [staging]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
